[gd_scene load_steps=20 format=1]

[ext_resource path="res://scripts/ui/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/squane-logo.png" type="Texture" id=2]
[ext_resource path="res://assets/img/play_btn.png" type="Texture" id=3]
[ext_resource path="res://assets/img/play4x4.png" type="Texture" id=4]
[ext_resource path="res://assets/img/shop_btn.png" type="Texture" id=5]
[ext_resource path="res://assets/img/help_btn.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Lato/Lato-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/lato35.fnt" type="BitmapFont" id=8]
[ext_resource path="res://assets/fonts/Lato/Lato-Italic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/img/sqoin.png" type="Texture" id=10]
[ext_resource path="res://assets/img/crown.png" type="Texture" id=11]
[ext_resource path="res://assets/img/black.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/lato40.fnt" type="BitmapFont" id=13]
[ext_resource path="res://assets/fonts/lato28.fnt" type="BitmapFont" id=14]
[ext_resource path="res://assets/img/buttons/half.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/lato38.fnt" type="BitmapFont" id=16]
[ext_resource path="res://assets/img/buttons/full.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]

font/size = 24
extra_spacing/char = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]

font/size = 30
extra_spacing/char = 1
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 9 )

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Logo" type="Sprite" parent="."]

transform/pos = Vector2( 300.116, 71.2178 )
transform/scale = Vector2( 0.357143, 0.357143 )
texture = ExtResource( 2 )

[node name="btn_play" type="TextureButton" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -118.0
margin/top = -358.0
margin/right = -258.0
margin/bottom = -498.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0
params/modulate = Color( 1, 0.466667, 0.482353, 1 )

[node name="btn_play4x4" type="TextureButton" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -288.0
margin/top = -358.0
margin/right = -428.0
margin/bottom = -498.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0
params/modulate = Color( 0.576471, 0.729412, 1, 1 )

[node name="btn_shop" type="TextureButton" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 560.0
margin/right = -226.0
margin/bottom = -636.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0
params/modulate = Color( 0.529412, 1, 0.529412, 1 )

[node name="btn_help" type="TextureButton" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 560.0
margin/right = -396.0
margin/bottom = -636.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0
params/modulate = Color( 1, 0.898039, 0.494118, 1 )

[node name="copyrights" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 949.0
margin/right = 601.0
margin/bottom = 1026.0
custom_fonts/font = SubResource( 1 )
text = "Made by Wisdom Workshop Â© 2017"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="record" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 223.0
margin/top = 730.0
margin/right = 601.0
margin/bottom = 807.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Best score: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="note" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 300.0
margin/right = 601.0
margin/bottom = 377.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Best score must be greater than 500"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sqoins" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 318.0
margin/top = 149.0
margin/right = 505.0
margin/bottom = 216.0
custom_fonts/font = ExtResource( 8 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sqoin" type="Sprite" parent="."]

transform/pos = Vector2( 542.933, 181.838 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="crown" type="Sprite" parent="."]

transform/pos = Vector2( 177.592, 766.424 )
transform/scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 11 )

[node name="black" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 1024.0
texture = ExtResource( 12 )
modulate = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
expand = true
stretch_mode = 0

[node name="text" type="Label" parent="black"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 280.0
margin/right = 580.0
margin/bottom = 523.0
custom_fonts/font = ExtResource( 13 )
text = "We highly recommend you to play a tutorial level, will you?"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text1" type="Label" parent="black"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 610.0
margin/right = 560.0
margin/bottom = 693.0
custom_fonts/font = ExtResource( 14 )
text = "(You can access the tutorial level from the help section)"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yes" type="TextureButton" parent="black"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 500.0
margin/right = 560.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.423529, 0.921569, 0.466667, 1 )

[node name="Label" type="Label" parent="black/yes"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.423529, 0.921569, 0.466667, 1 )
text = "Yes"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="no" type="TextureButton" parent="black"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 500.0
margin/right = 290.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.851562, 0.289398, 0.289398, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="black/no"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 250.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.85098, 0.286275, 0.286275, 1 )
text = "No"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="changes" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 1024.0
texture = ExtResource( 12 )
modulate = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
expand = true
stretch_mode = 0

[node name="text" type="Label" parent="changes"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 20.0
margin/right = 580.0
margin/bottom = 263.0
custom_fonts/font = ExtResource( 13 )
text = "What is new in version 3.0"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="features" type="Label" parent="changes"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 210.0
margin/right = 530.0
margin/bottom = 900.0
custom_fonts/font = ExtResource( 8 )
text = "# Improved performance
# Fixed some bugs

# Added a new way of selecting squares. Now you can slide with your finger or tap.

# Added tablet support
# 4x4 levels can be resumed
# Color minimap added
"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="continue" type="TextureButton" parent="changes"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 900.0
margin/right = 550.0
margin/bottom = 980.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
params/resize_mode = 0
params/stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="changes/continue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 16 )
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


